--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
     "mongoose": "^7.4.0",
+    "nodemailer": "^6.9.4",
     "pug": "^3.0.2"
   }
 }
