--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.0",
     "nodemailer": "^6.9.4",
     "pug": "^3.0.2"
