--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
+    "pdfkit": "^0.13.0",
     "pug": "^3.0.2"
   }
 }
