--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.4",
     "pdfkit": "^0.13.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "stripe": "^12.18.0"
   }
 }
